\name{NEWS}
\alias{NEWS}
\title{NEWS file for the Pade package}

\section{Changes in version 1.0.5 (2023-02-01)}{
  \subsection{Changed}{
    \itemize{
      \item Updated help
      \item Updated Github actions
      \item Made code more consistent with style guide
      \item CITATION converted to use \code{bibentry} at CRAN request
    }
  }
}

\section{Changes in version 1.0.4 (2022-01-18)}{
  \subsection{Changed}{
    \itemize{
      \item Converted tests to \code{tinytest} to reduce dependencies
      \item Added DOI to citation
    }
  }
}

\section{Changes in version 1.0.3 (2020-11-10)}{
  \subsection{Fixed}{
    \itemize{
      \item Corrected CRAN requests
    }
  }
}

\section{Changes in version 1.0.2 (2020-11-08)}{
  \subsection{Changed}{
    \itemize{
      \item Changed tests to be compliant with \code{testthat} 3rd edition
      \item Cleaned up documentation
    }
  }
}

\section{Changes in version 1.0.1 (2020-06-02)}{
  \subsection{Added}{
    \itemize{
      \item Added source and ISBN to Description per CRAN request
      \item Added CITATION file
    }
  }
  \subsection{Changed}{
    \itemize{
      \item Cleaned README & NEWS
    }
  }
}

\section{Changes in version 1.0.0 (2019-12-08)}{
  \subsection{Added}{
    \itemize{
      \item Added CRAN version release and date badge
    }
  }
  \subsection{Changed}{
    \itemize{
      \item Incremented to release version
      \item Internal tweaks to project files
    }
  }
}

\section{Changes in version 0.1.5 (2019-10-07)}{
  \subsection{Changed}{
    \itemize{
      \item Moved primary repository from Bitbucket to Github
      \item Changed versioning to more canonic Major.Minor.Patch
      \item Changed example to use lowercase \code{x}
      \item Changed Author description to include ORCID
      \item Added project status badge to README
      \item Added line feeds before and after LaTeX blocks in README
    }
  }
}

\section{Changes in version 0.1-4 (2015-07-29)}{
  \subsection{Bug fixes}{